--- a/.github/workflows/releaseAndroid.yml
+++ b/.github/workflows/releaseAndroid.yml
@@ -17,10 +17,11 @@ jobs:
         with:
           channel: 'stable'
       - run: flutter pub get
-      - run: flutter format --set-exit-if-changed .
       - run: flutter analyze .
       - run: flutter build apk --release
-      - uses: actions/upload-artifact@v3.1.0
+      - uses: ncipollo/release-action@v1
         with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+          artifacts: "build/app/outputs/apk/debug/*"
+          tag: v1.0.${{ github.run_number }}
+          token: ${{ secrets.RELEAS_TOKEN }}
+        
