--- a/.github/workflows/releaseAndroid.yml
+++ b/.github/workflows/releaseAndroid.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           channel: 'stable'
       - run: flutter pub get
+      - run: flutter format --set-exit-if-changed .
       - run: flutter analyze .
       - run: flutter build apk --release
       - uses: ncipollo/release-action@v1
