Update release APK path in workflow

--- a/.github/workflows/releaseAndroid.yml
+++ b/.github/workflows/releaseAndroid.yml
@@ -22,7 +22,7 @@ jobs:
       - run: flutter build apk --release
       - uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/debug/*"
+          artifacts: "build/app/outputs/flutter-apk/app-release.apk"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.RELEAS_TOKEN }}
         
